@@ -19,6 +19,7 @@ version <next>:
 - LucasArts SMUSH demuxer
 - MP2 encoding via TwoLAME
 - asettb filter
+- Direct Stream Digital (DSD) decoder
 
 
 version 10:
